<resources>

    <string name="app_name">Unit Converter</string>
    <string name="numpad9">9</string>
    <string name="numpad8">8</string>
    <string name="numpad7">7</string>
    <string name="numpad6">6</string>
    <string name="numpad5">5</string>
    <string name="numpad4">4</string>
    <string name="numpad3">3</string>
    <string name="numpad2">2</string>
    <string name="numpad1">1</string>
    <string name="numpadDot">.</string>
    <string name="numpad0">0</string>
    <string name="numpadClear">C</string>
    <string name="weight">weight</string>
    <string name="distance">distance</string>
    <string name="volume">volume</string>

    <string-array name="weight_names">
        <item>Kg</item>
        <item>Oz</item>
        <item>Kt</item>
    </string-array>

    <string-array name="distance_names">
        <item>Mt</item>
        <item>Yd</item>
        <item>In</item>
    </string-array>

    <string-array name="volume_names">
        <item>Lt</item>
        <item>Gl</item>
        <item>Pt</item>
    </string-array>

</resources>