<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DataFragment">

    <RadioGroup
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:checked="true"
            android:id="@+id/rbWeight"
            android:text="@string/weight"
            style="@style/radioButton" />

        <RadioButton
            android:id="@+id/rbDistance"
            style="@style/radioButton"
            android:text="@string/distance" />

        <RadioButton
            android:id="@+id/rbVolume"
            style="@style/radioButton"
            android:text="@string/volume" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>